import pytest
from syrupy.assertion import SnapshotAssertion

from surepcio import Household
from surepcio.client import SurePetcareClient
from tests.conftest import object_snapshot


@pytest.mark.asyncio
@pytest.mark.parametrize("device_names", [["pet_door", "household"]])
async def test_snapshot(snapshot: SnapshotAssertion, register_device_api_mocks, mock_devices):
    register_device_api_mocks(mock_devices)
    async with SurePetcareClient() as client:
        household: Household = await client.api(Household.get_household(7777))
        devices = await client.api(household.get_devices())
        for device in devices:
            object_snapshot(device, snapshot)
